--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -3,4 +3,5 @@
   border-radius: 12px;
   background-color: #ffffff1f;
   padding: 2rem;
+  flex-grow: 1;
 }
